<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ /*
  ~  * Copyright (C) 2017 Darel Bitsy
  ~  * Licensed under the Apache License, Version 2.0 (the "License");
  ~  * you may not use this file except in compliance with the License.
  ~  * You may obtain a copy of the License at
  ~  *
  ~  *     http://www.apache.org/licenses/LICENSE-2.0
  ~  *
  ~  * Unless required by applicable law or agreed to in writing, software
  ~  * distributed under the License is distributed on an "AS IS" BASIS,
  ~  * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~  * See the License for the specific language governing permissions and
  ~  * limitations under the License
  ~  */
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <group
        android:id="@+id/userGroup"
        android:orderInCategory="101"
        android:checkableBehavior="single">
        <item android:id="@+id/action_open_lists"
            android:title="@string/lists"
            android:icon="@drawable/ic_lists"
            android:checked="true"/>

    </group>

    <group
        android:id="@+id/appGroup"
        android:orderInCategory="102"
        android:checkableBehavior="single">

        <item android:id="@+id/action_send_comments"
            android:title="@string/action_send_comments"
            android:icon="@drawable/ic_send_comment"
            android:checked="false" />

        <item android:id="@+id/action_recommend_us"
            android:title="@string/action_recommend_us"
            android:icon="@drawable/ic_recommend_us"
            android:checked="false" />

        <item android:id="@+id/action_settings"
            android:title="@string/label_settings"
            android:icon="@drawable/ic_settings"
            android:checked="false" />
    </group>

    <group
        android:id="@+id/systemGroup"
        android:orderInCategory="103"
        android:checkableBehavior="single">
        <item android:id="@+id/action_logout_user"
            android:title="@string/action_logout_user"
            android:icon="@drawable/ic_logout"
            android:checked="false"/>
    </group>

</menu>
