<?xml version="1.0" encoding="utf-8"?>

<!--
  ~ /*
  ~  * Copyright (C) 2017 Darel Bitsy
  ~  * Licensed under the Apache License, Version 2.0 (the "License");
  ~  * you may not use this file except in compliance with the License.
  ~  * You may obtain a copy of the License at
  ~  *
  ~  *     http://www.apache.org/licenses/LICENSE-2.0
  ~  *
  ~  * Unless required by applicable law or agreed to in writing, software
  ~  * distributed under the License is distributed on an "AS IS" BASIS,
  ~  * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~  * See the License for the specific language governing permissions and
  ~  * limitations under the License
  ~  */
  -->
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <CheckBoxPreference
        android:key="orderByPublishTime"
        android:title="@string/action_sort_by_publish_time"
        android:capitalize="none"
        android:ellipsize="end"/>

    <CheckBoxPreference
        android:key="orderByListName"
        android:title="@string/action_sort_by_list_name"
        android:capitalize="none"
        android:ellipsize="end"/>

    <CheckBoxPreference
        android:key="orderByOwnerName"
        android:title="@string/action_sort_by_owner_name"
        android:capitalize="none"
        android:ellipsize="end"/>

</PreferenceScreen>