<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ /*
  ~  * Copyright (C) 2017 Darel Bitsy
  ~  * Licensed under the Apache License, Version 2.0 (the "License");
  ~  * you may not use this file except in compliance with the License.
  ~  * You may obtain a copy of the License at
  ~  *
  ~  *     http://www.apache.org/licenses/LICENSE-2.0
  ~  *
  ~  * Unless required by applicable law or agreed to in writing, software
  ~  * distributed under the License is distributed on an "AS IS" BASIS,
  ~  * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~  * See the License for the specific language governing permissions and
  ~  * limitations under the License
  ~  */
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".detailItem.view.ItemDetailViewImpl">

    <item
        android:id="@+id/action_open_item_comment"
        android:icon="@drawable/ic_chat"
        android:orderInCategory="2"
        android:title="@string/action_open_item_comment"
        android:visible="true"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_delete_item"
        android:icon="@drawable/ic_delete"
        android:orderInCategory="1"
        android:title="@string/action_remove_item"
        android:visible="true"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_item_done"
        android:icon="@drawable/ic_done"
        android:orderInCategory="3"
        android:title="@string/confirm_changes"
        android:visible="true"
        app:showAsAction="always" />

</menu>