<!--
  ~ /*
  ~  * Copyright (C) 2017 Darel Bitsy
  ~  * Licensed under the Apache License, Version 2.0 (the "License");
  ~  * you may not use this file except in compliance with the License.
  ~  * You may obtain a copy of the License at
  ~  *
  ~  *     http://www.apache.org/licenses/LICENSE-2.0
  ~  *
  ~  * Unless required by applicable law or agreed to in writing, software
  ~  * distributed under the License is distributed on an "AS IS" BASIS,
  ~  * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~  * See the License for the specific language governing permissions and
  ~  * limitations under the License
  ~  */
  -->

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data />

    <android.support.constraint.ConstraintLayout
        android:id="@+id/forgotPasswordLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="?attr/colorPrimary"
        tools:context="com.dbeginc.dbshopping.authentication.forgotpassword.ForgotPasswordFragment">


        <android.support.constraint.Guideline
            android:id="@+id/layoutDividerFP"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.45" />

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/forgotPasswordAnimation"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            app:lottie_fileName="suspects.json"
            app:lottie_loop="true"
            app:lottie_autoPlay="true"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toBottomOf="@id/layoutDividerFP" />

        <TextView
            android:id="@+id/forgotPasswordHeader"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/forgotYourPassword"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/layoutDividerFP" />

        <TextView
            android:id="@+id/forgotPasswordSubHeader"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/forgotPasswordInstructions"
            android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
            android:textAlignment="center"
            android:layout_margin="16dp"
            app:layout_constraintTop_toBottomOf="@id/forgotPasswordHeader"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent" />

        <android.support.v7.widget.CardView
            android:id="@+id/forgotPasswordCV"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            style="@style/CardView.Light"
            app:cardElevation="2dp"
            app:cardMaxElevation="8dp"
            app:cardCornerRadius="16dp"
            app:cardPreventCornerOverlap="true"
            app:cardUseCompatPadding="true"
            app:contentPaddingTop="8dp"
            app:contentPaddingLeft="16dp"
            app:contentPaddingRight="16dp"
            app:layout_constraintTop_toBottomOf="@id/forgotPasswordSubHeader"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/forgotPasswordEmailContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/EmailHint"
                style="@style/Widget.Design.TextInputLayout"
                app:hintEnabled="true"
                app:hintAnimationEnabled="true"
                app:errorEnabled="true">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/forgotPasswordEmail"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="textEmailAddress"
                    android:imeOptions="actionDone"
                    android:drawableStart="@drawable/ic_email_24dp"
                    android:drawablePadding="8dp"
                    style="@style/Widget.AppCompat.EditText" />
            </android.support.design.widget.TextInputLayout>
        </android.support.v7.widget.CardView>

        <Button
            android:id="@+id/forgotPasswordResetPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:filterTouchesWhenObscured="true"
            android:text="@string/reset_password"
            android:textAllCaps="true"
            style="@style/Widget.AppCompat.Button.Colored"
            app:layout_constraintTop_toBottomOf="@id/forgotPasswordCV"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent" />

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/forgotPasswordLoadingAnimation"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:lottie_enableMergePathsForKitKatAndAbove="true"
            app:lottie_fileName="forgot_password_loading.json"
            app:lottie_loop="true"
            app:lottie_autoPlay="true"
            app:layout_constraintTop_toTopOf="@id/forgotPasswordResetPassword"
            app:layout_constraintLeft_toLeftOf="@id/forgotPasswordResetPassword"
            app:layout_constraintRight_toRightOf="@id/forgotPasswordResetPassword"
            app:layout_constraintBottom_toBottomOf="@id/forgotPasswordResetPassword"/>

        <TextView
            android:id="@+id/forgotPasswordAlreadyGotPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/alreadyHaveAccountToLogin"
            android:textAllCaps="false"
            android:textAppearance="@style/TextAppearance.AppCompat.Caption"
            app:layout_constraintTop_toBottomOf="@id/forgotPasswordResetPassword"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@+id/forgotPasswordGoToLoginScreenBtn"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_chainStyle="packed" />

        <Button
            android:id="@+id/forgotPasswordGoToLoginScreenBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/loginLabel"
            android:textAllCaps="true"
            android:filterTouchesWhenObscured="true"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            app:layout_constraintTop_toTopOf="@id/forgotPasswordAlreadyGotPassword"
            app:layout_constraintLeft_toRightOf="@id/forgotPasswordAlreadyGotPassword"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toBottomOf="@id/forgotPasswordAlreadyGotPassword" />

    </android.support.constraint.ConstraintLayout>
</layout>
